# tukey_with_groups

./: README.md  pyproject.toml
src/tukey_with_groups/: __init__.py  core.py
tests/: test_tukey.py
