[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tukey-with-groups"
version = "0.1.0"
description = "Tukey HSD with compact letter group assignment"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "tukey_with_groups contributors" }
]
dependencies = [
  "pandas>=1.5",
  "statsmodels>=0.14"
]

[project.urls]
Homepage = "https://example.com/tukey-with-groups"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
